--- a/AUTHORS
+++ b/AUTHORS
@@ -2,4 +2,5 @@
 # This file lists all contributors to the repository.
 # See hack/generate-authors.sh to make modifications.
 
-
+root <lawaltemmanuel@gmail>
+‘PachoIhirwe’ <‘alainpa18@gmail.com’>
